# relink

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  package.json
.github/workflows/: ci.yml
apps/web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/coach/: route.ts
apps/web/src/app/check-in/: page.tsx
apps/web/src/app/coach/: page.tsx
apps/web/src/app/ethics/: page.tsx
apps/web/src/app/home/: page.tsx
apps/web/src/app/insights/: page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/app/plans/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/slip/: page.tsx
apps/web/src/app/urge/: page.tsx
apps/web/src/components/: Shell.tsx
apps/web/src/domain/: metrics.test.ts  metrics.ts  types.ts
apps/web/src/lib/: coach-client.test.ts  coach-client.ts  store.test.ts  store.ts
deploy/: deploy.sh
scripts/: e2e_coach.sh
services/coach/: .coverage  .dockerignore  Dockerfile  pyproject.toml
services/coach/relink_coach/: __init__.py  adk_app.py  agents.py  http_client.py  json_util.py  llm.py  main.py  mock_replies.py  models.py  safety.py
services/coach/relink_coach/providers/: __init__.py  config.py  ollama.py  router.py  types.py  vertex.py
services/coach/tests/: test_agents.py  test_api.py  test_chat_routing.py  test_http_client.py  test_json_util.py  test_llm_helpers.py  test_mock_modes.py  test_ollama_provider.py  test_router.py  test_router_meta.py  test_safety.py  test_vertex_provider.py
