[project]
name = "relink-coach"
version = "0.2.0"
description = "Relink multi-agent habit coach — Google ADK graph, Ollama Cloud, Vertex Gemini fallback"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0", "respx>=0.21.0"]
adk = ["google-adk>=1.0.0", "litellm>=1.40.0"]
all = ["google-adk>=1.0.0", "litellm>=1.40.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0", "respx>=0.21.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["relink_coach*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=relink_coach --cov-report=term-missing"

[tool.coverage.run]
omit = ["relink_coach/adk_app.py", "relink_coach/providers/vertex.py"]
source = ["relink_coach"]

[tool.coverage.report]
fail_under = 80
exclude_lines = ["pragma: no cover", "if __name__"]
omit = ["relink_coach/adk_app.py"]
